<?xml version="1.0"?>
<package>
  <name>abb_robotnode</name>
  <version>1.0.0</version>
  <description>ROS package for connecting with ABB controllers via TCP/IP, featuring several operation modes.</description>

  <maintainer email="joseb@mit.edu">Jose Ballester</maintainer>

  <license>TODO</license>

  <url type="website">http://github.com/mcubelab/abb_robotnode</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
